# song_recommender

./: pyproject.toml
data/: 3_combined_clean_dataset.csv  4_sp_songs.csv
data/batches/: songs_batch_1.csv  songs_batch_10.csv  songs_batch_100.csv  songs_batch_101.csv  songs_batch_102.csv  songs_batch_103.csv  songs_batch_104.csv  songs_batch_105.csv  songs_batch_106.csv  songs_batch_107.csv  songs_batch_108.csv  songs_batch_109.csv  songs_batch_11.csv  songs_batch_110.csv  songs_batch_111.csv  songs_batch_112.csv  songs_batch_113.csv  songs_batch_114.csv  songs_batch_115.csv  songs_batch_116.csv  songs_batch_117.csv  songs_batch_118.csv  songs_batch_119.csv  songs_batch_12.csv  songs_batch_120.csv  songs_batch_121.csv  songs_batch_122.csv  songs_batch_123.csv  songs_batch_124.csv  songs_batch_125.csv  songs_batch_126.csv  songs_batch_127.csv  songs_batch_128.csv  songs_batch_129.csv  songs_batch_13.csv  songs_batch_130.csv  songs_batch_131.csv  songs_batch_132.csv  songs_batch_133.csv  songs_batch_134.csv  (+111 more)
data/encoding/: encoded_songs_batch_1.csv
notebooks/: 1_data_collection.ipynb  2_data_processing.ipynb  3_spotify_api_extension.ipynb  4_modeling_evaluation.ipynb
utils/: functions.py
